# alfred

./: .gitignore  CMakeLists.txt
include/: config.h  file_conversion.h  myamqp.h  myawss3.h  utils.h
src/: alfred.cpp  config.cpp  file_conversion.cpp  myamqp.cpp  myawss3.cpp  utils.cpp
